@@ -2,7 +2,6 @@ package com.qiu.controllers;
 
 import com.qiu.dto.SellRequest;
 import com.qiu.entities.Auction;
-import com.qiu.entities.AuctionHistory;
 import com.qiu.entities.User;
 import com.qiu.repositories.AuctionHistoryRepository;
 import com.qiu.repositories.AuctionRepository;
@@ -14,12 +13,13 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.security.Principal;
 import java.time.LocalDateTime;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Controller
@@ -40,24 +40,27 @@ public class AuctionController {
     @Autowired
     private AuctionRepository auctionRepository;
 
-    // Metoda obsługująca widok HTML
     @GetMapping("/auctions")
     public String showAuctions(Model model, Principal principal) {
         List<Auction> allAuctions = auctionService.findAll();
         String currentUsername = principal.getName();
 
-        // Logowanie dla diagnostyki
-        System.out.println("DEBUG: Zalogowany użytkownik to: " + currentUsername);
-        allAuctions.forEach(a -> {
-            String sellerName = (a.getSeller() != null) ? a.getSeller().getUsername() : "Brak";
-            System.out.println("DEBUG: Aukcja ID " + a.getId() + " sprzedawca: " + sellerName +
-                    " | Czy to ten sam użytkownik? " + sellerName.equals(currentUsername));
-        });
 
-        // Twój filtr
         List<Auction> filteredAuctions = allAuctions.stream()
                 .filter(a -> a.getSeller() != null && !a.getSeller().getUsername().equals(currentUsername))
-                .collect(Collectors.toList());
+                .toList();
+
+        // AuctionController.showAuctions() — dodaj mapę leadingBidders
+        Map<Long, String> leadingBidders = new HashMap<>();
+        filteredAuctions.forEach(a -> {
+            auctionHistoryRepository
+                    .findByAuctionIdOrderByEventDateDesc(a.getId())
+                    .stream()
+                    .filter(h -> "BID".equals(h.getEventType()))
+                    .findFirst()
+                    .ifPresent(h -> leadingBidders.put(a.getId(), h.getOwner().getUsername()));
+        });
+        model.addAttribute("leadingBidders", leadingBidders);
 
         model.addAttribute("auctions", filteredAuctions);
         model.addAttribute("auctionsCount", filteredAuctions.size());
@@ -66,37 +69,24 @@ public class AuctionController {
 
 
     @PostMapping("/sell")
-    public String sellItem(@RequestParam Long itemId,
-                           @RequestParam double price,
-                           @RequestParam int hours,
-                           Principal principal) {
+    public String sellItem(SellRequest data, Principal principal, RedirectAttributes redirectAttributes) {
+        try {
+            String username = principal.getName();
+            User user = userRepository.findByUsername(username)
+                    .orElseThrow(() -> new RuntimeException("Nie znaleziono użytkownika"));
 
-        String username = principal.getName();
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("Nie znaleziono użytkownika"));
+            auctionService.createAuctionFromItem(data.getItemId(), data.getPrice(), data.getHours());
+            statsService.updateAuctionsCount();
+        } catch (IllegalArgumentException e) {
+            // Przekazujemy błąd do widoku (musisz obsłużyć wyświetlanie w HTML)
+            redirectAttributes.addFlashAttribute("errorMessage", e.getMessage());
+        }
 
-        // Wywołanie logiki biznesowej
-        auctionService.createAuctionFromItem(itemId, user.getId(), price, hours);
-        statsService.updateAuctionsCount();
 
-        // Po wystawieniu przedmiotu przekierowujemy z powrotem na ekwipunek
-        return "redirect:/equipment?success=true";
+        return "redirect:/equipment";
     }
 
-    // AuctionController — nowy endpoint
-//    @GetMapping("/auctions/my-active-bids")
-//    @ResponseBody
-//    public List<Long> getMyActiveBids(Principal principal) {
-//        User user = userRepository.findByUsername(principal.getName()).orElseThrow();
-//        // Zwróć ID aukcji gdzie ten user ma wpis BID w historii
-//        return auctionHistoryRepository
-//                .findByOwnerAndEventType(user, "BID")
-//                .stream()
-//                .map(h -> h.getAuction().getId())
-//                // Filtruj tylko aktywne (nie zakończone)
-//                .distinct()
-//                .collect(Collectors.toList());
-//    }
+
 
     @PostMapping("/auctions/{auctionId}/bid")
     @ResponseBody
@@ -111,7 +101,6 @@ public class AuctionController {
             auctionService.placeBid(auctionId, amount, user);
             return ResponseEntity.ok(Map.of("success", true, "newPrice", amount));
         } catch (IllegalArgumentException e) {
-            // Zwróć błąd walidacji ceny do frontendu
             return ResponseEntity.badRequest().body(Map.of("success", false, "error", e.getMessage()));
         }
     }
@@ -123,8 +112,6 @@ public class AuctionController {
             @RequestParam boolean watching,
             Principal principal) {
 
-        System.out.println("DEBUG WATCH endpoint: auctionId=" + auctionId
-                + " watching=" + watching + " user=" + principal.getName()); // <-- dodaj
 
         User user = userRepository.findByUsername(principal.getName())
                 .orElseThrow(() -> new RuntimeException("Nie znaleziono użytkownika"));
@@ -138,35 +125,31 @@ public class AuctionController {
     public List<Long> getMyActiveBids(Principal principal) {
         String username = principal.getName();
 
-        // 1. Aukcje gdzie user licytował
         List<Long> fromBids = auctionHistoryRepository
                 .findByOwnerUsernameAndEventType(username, "BID")
                 .stream()
                 .map(h -> h.getAuction().getId())
-                .collect(Collectors.toList());
+                .toList();
 
-        // 2. Aukcje gdzie user kliknął serduszko i nie odsubskrybował
-        //    Pobierz wszystkie aukcje gdzie był kiedykolwiek WATCH
+
         List<Long> watchedAuctionIds = auctionHistoryRepository
                 .findByOwnerUsernameAndEventType(username, "WATCH")
                 .stream()
                 .map(h -> h.getAuction().getId())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
-        //    Filtruj tylko te gdzie WATCH jest aktywny (brak nowszego UNWATCH)
+
         List<Long> fromWatch = watchedAuctionIds.stream()
                 .filter(id -> auctionHistoryRepository.isActivelyWatching(username, id))
-                .collect(Collectors.toList());
+                .toList();
 
-        System.out.println("DEBUG: fromBids = " + fromBids);
-        System.out.println("DEBUG: fromWatch = " + fromWatch);
 
         return Stream.concat(fromBids.stream(), fromWatch.stream())
                 .distinct()
                 .filter(id -> auctionRepository.findById(id)
                         .map(a -> a.getEndDate().isAfter(LocalDateTime.now()))
                         .orElse(false))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
